--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -25,7 +25,7 @@
         android:id="@+id/piggybank"
         android:layout_width="210dp"
         android:layout_height="177dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:contentDescription="Piggybank"
         android:src="@drawable/piggybank"
         app:layout_constraintTop_toBottomOf="@id/logo"
@@ -83,7 +83,7 @@
         android:hint="Email"
         app:boxBackgroundColor="@color/grey_dark"
         android:textColorHint="@color/grey_light"
-        app:boxBackgroundMode="filled"
+        app:boxBackgroundMode="outline"
         app:boxCornerRadiusTopStart="12dp"
         app:boxCornerRadiusTopEnd="12dp"
         app:boxCornerRadiusBottomStart="12dp"
@@ -99,6 +99,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/manrope_regular"
             android:inputType="textEmailAddress"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
             android:textColor="@color/grey_light" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -110,7 +112,7 @@
         android:hint="Password"
         android:textColorHint="@color/grey_light"
         app:boxBackgroundColor="@color/grey_dark"
-        app:boxBackgroundMode="filled"
+        app:boxBackgroundMode="outline"
         app:boxCornerRadiusTopStart="12dp"
         app:boxCornerRadiusTopEnd="12dp"
         app:boxCornerRadiusBottomStart="12dp"
@@ -126,6 +128,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/manrope_regular"
             android:inputType="textPassword"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
             android:textColor="@color/grey_light" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -137,6 +141,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginHorizontal="60dp"
         android:text="Sign in"
+        android:letterSpacing="0"
         android:textSize="18sp"
         android:textAllCaps="false"
         android:backgroundTint="@color/orange"
@@ -153,7 +158,7 @@
         android:id="@+id/sign_in_join_us_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="60dp"
         android:text="@string/sign_in_new_user_text"
         android:textColor="@color/grey_light"
         android:textSize="14sp"
