--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,7 +26,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="52dp"
         android:fontFamily="@font/manrope_bold"
         android:text="@string/sign_up_text"
         android:textColor="@color/white"
@@ -41,11 +41,11 @@
         android:id="@+id/name_input"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="22dp"
         android:hint="Email"
         app:boxBackgroundColor="@color/grey_dark"
         android:textColorHint="@color/grey_light"
-        app:boxBackgroundMode="filled"
+        app:boxBackgroundMode="outline"
         app:boxCornerRadiusTopStart="12dp"
         app:boxCornerRadiusTopEnd="12dp"
         app:boxCornerRadiusBottomStart="12dp"
@@ -61,6 +61,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/manrope_regular"
             android:inputType="textEmailAddress"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
             android:textColor="@color/grey_light" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -72,7 +74,7 @@
         android:hint="Password"
         android:textColorHint="@color/grey_light"
         app:boxBackgroundColor="@color/grey_dark"
-        app:boxBackgroundMode="filled"
+        app:boxBackgroundMode="outline"
         app:boxCornerRadiusTopStart="12dp"
         app:boxCornerRadiusTopEnd="12dp"
         app:boxCornerRadiusBottomStart="12dp"
@@ -88,6 +90,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/manrope_regular"
             android:inputType="textPassword"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
             android:textColor="@color/grey_light" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -99,7 +103,7 @@
         android:hint="Password"
         android:textColorHint="@color/grey_light"
         app:boxBackgroundColor="@color/grey_dark"
-        app:boxBackgroundMode="filled"
+        app:boxBackgroundMode="outline"
         app:boxCornerRadiusTopStart="12dp"
         app:boxCornerRadiusTopEnd="12dp"
         app:boxCornerRadiusBottomStart="12dp"
@@ -115,6 +119,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/manrope_regular"
             android:inputType="textPassword"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
             android:textColor="@color/grey_light" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -126,7 +132,7 @@
         android:hint="Password"
         android:textColorHint="@color/grey_light"
         app:boxBackgroundColor="@color/grey_dark"
-        app:boxBackgroundMode="filled"
+        app:boxBackgroundMode="outline"
         app:boxCornerRadiusTopStart="12dp"
         app:boxCornerRadiusTopEnd="12dp"
         app:boxCornerRadiusBottomStart="12dp"
@@ -142,6 +148,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/manrope_regular"
             android:inputType="textPassword"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
             android:textColor="@color/grey_light" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -153,6 +161,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginHorizontal="60dp"
         android:text="Sign up"
+        android:letterSpacing="0"
         android:textSize="18sp"
         android:textAllCaps="false"
         android:backgroundTint="@color/orange"
@@ -169,7 +178,7 @@
         android:id="@+id/sign_in_join_us_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="60dp"
         android:text="@string/sign_up_old_user_text"
         android:textColor="@color/grey_light"
         android:textSize="14sp"
