--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -14,6 +14,7 @@
         android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@null"
         android:src="@drawable/bm_logo"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -156,7 +157,6 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/sign_up_button"
         android:layout_width="0dp"
-        android:textColorHint="@color/grey_light"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginHorizontal="60dp"
@@ -169,7 +169,6 @@
         android:fontFamily="@font/manrope_extrabold"
         android:paddingVertical="12dp"
         app:cornerRadius="14dp"
-        app:backgroundTint="@color/black"
         app:layout_constraintTop_toBottomOf="@id/repeat_password_input"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
