--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,24 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigationDashboard"
         android:icon="@drawable/ic_dashboard_white_24dp"
-        android:title="@string/title_dashboard"        android:tint="@color/white"
+        android:tint="@color/white"
+        android:title="@string/title_dashboard"
 
         />
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigationBudgets"
         android:icon="@drawable/ic_home_white_24dp"
-        android:title="@string/title_home"
-        />
-
+        android:title="@string/title_budgets" />
 
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigationSettings"
         android:icon="@drawable/ic_notifications_white_24dp"
-        android:title="@string/title_notifications"
-        />
+        android:title="@string/title_settings" />
 
 </menu>
