--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_dashboard">
+    app:startDestination="@+id/navigationDashboard">
 
     <fragment
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigationBudgets"
         android:name="com.example.budgetmaster.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:label="@string/title_budgets"
+        tools:layout="@layout/fragment_budgets" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigationDashboard"
         android:name="com.example.budgetmaster.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigationSettings"
         android:name="com.example.budgetmaster.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:label="@string/title_settings"
+        tools:layout="@layout/fragment_settings" />
 </navigation>
