--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.BudgetMaster" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.BudgetMaster" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/orange</item>
         <item name="colorPrimaryVariant">@color/orange</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -8,5 +8,6 @@
         <item name="colorSecondaryVariant">@color/yellow</item>
 
         <item name="android:statusBarColor">@color/grey_dark</item>
+        <item name="android:fontFamily">@font/manrope_semibold</item>
     </style>
 </resources>
