--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,7 +5,6 @@
     android:fitsSystemWindows="false">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/summary"
         android:layout_width="match_parent"
         android:layout_height="260dp"
@@ -13,7 +12,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-        <!-- Vertical Guideline at 60% (for left-right split) -->
+        <!-- vertical guideline - 60% (left-right split) -->
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineVertical"
             android:layout_width="match_parent"
@@ -21,7 +20,6 @@
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.6" />
 
-        <!-- My Expenses block (left) -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/myExpensesBlock"
             android:layout_width="0dp"
@@ -99,7 +97,6 @@
                 app:layout_constraintEnd_toEndOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <!-- Debt block (bottom-right) -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/debtBlock"
             android:layout_width="0dp"
@@ -150,15 +147,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/summary">
 
-        <!-- Header Row -->
         <LinearLayout
             android:id="@+id/headerRow"
             android:layout_width="0dp"
-            android:paddingHorizontal="18dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
+            android:paddingHorizontal="18dp"
             android:weightSum="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -174,20 +170,20 @@
                 android:textColor="@color/orange"
                 android:textSize="18sp" />
 
-            <Button
+
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/seeAllButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/primary_button_bg"
+                android:backgroundTint="@color/orange"
                 android:fontFamily="@font/manrope_bold"
-                android:minWidth="0dp"
-                android:minHeight="0dp"
-                android:paddingVertical="0dp"
-                android:text="Show All"
-                android:textAllCaps="false" />
+                android:text="See all"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                app:cornerRadius="30dp" />
+
         </LinearLayout>
 
-        <!-- RecyclerView filling the rest -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/latestExpensesRecycler"
             android:layout_width="0dp"
@@ -201,6 +197,19 @@
             app:layout_constraintTop_toBottomOf="@id/headerRow"
             app:layout_constraintVertical_bias="0.0" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="120dp"
+            android:backgroundTint="@color/orange"
+            android:contentDescription="Add Budget"
+            android:src="@drawable/ic_add"
+            android:tint="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
