--- a/app/src/main/res/layout/fragment_budgets.xml
+++ b/app/src/main/res/layout/fragment_budgets.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -59,7 +60,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="24dp"
             android:backgroundTint="#3C3C3C"
             app:cardCornerRadius="12dp"
             app:cardElevation="0dp"
