--- a/app/src/main/res/layout/item_budgets.xml
+++ b/app/src/main/res/layout/item_budgets.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="8dp"
+        android:contentDescription="@null"
         app:layout_constraintTop_toBottomOf="@id/walletName"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -44,7 +45,6 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:src="@drawable/ic_person"
-            android:background="@drawable/ic_person"
             android:padding="4dp" />
 
         <TextView
